vote-web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vote-web
  template:
    metadata:
      labels:
        app: vote-web
    spec:
      containers:
      - name: vote-web
        image: vote-web:latest
        imagePullPolicy: Never
        resources:
          limits:
            memory: "64Mi"
            cpu: "128m"
        ports:
        - containerPort: 5000
