vote-web/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vote-web
spec:
  hosts:
  - voteweb.com
  gateways:
  - vote-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: vote-web.default.svc.cluster.local
